--- a/index.html
+++ b/index.html
@@ -7,26 +7,50 @@
     <title>Il Mio Viaggio a Londra</title>
 </head>
     <body>
-        <div>
-            
             <!-- TITOLO + IMMAGINI -->
         <h1>Il mio Viaggio a Londra</h1>
         <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
         <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
         <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
-    </div>
 
         <hr>
            <!-- Lista delle spese -->
-    <div>
         <h2>Le mie spese</h2>
         <table>
+            <!-- Intestazione Tabella -->
             <thead>
                 <th>Numero</th>
                 <th>Descrizione</th>
                 <th>Costo</th>
+        </thead>
 
-            </thead>
+        <!-- Corpo Tabella -->
+        <body>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+            </tr>
+
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+            </tr>
+
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+            </tr>
+
+            <tr>
+                <td>Totale</td>
+                <td> </td>
+                <td>360€</td>
+            </tr>
+        </body>
+            
 
 
 
