--- a/index.html
+++ b/index.html
@@ -6,87 +6,92 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Il Mio Viaggio a Londra</title>
 </head>
-    <body>
+<div>
+    <header>
             <!-- TITOLO + IMMAGINI -->
         <h1>Il mio Viaggio a Londra</h1>
         <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
         <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
         <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+    </header>
+</div>
+    <div>
+        <body>
+            <hr>
+            <!-- Lista delle spese -->
+            <h2>Le mie spese</h2>
+        <table>
+                <!-- Intestazione Tabella -->
+                <thead>
+                    <tr>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </tr>
+            </thead>
 
-        <hr>
-           <!-- Lista delle spese -->
-        <h2>Le mie spese</h2>
-    <table>
-            <!-- Intestazione Tabella -->
-            <thead>
+            <!-- Corpo Tabella -->
                 <tr>
-                <th>Numero</th>
-                <th>Descrizione</th>
-                <th>Costo</th>
-            </tr>
-        </thead>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
 
-        <!-- Corpo Tabella -->
-            <tr>
-                <td>1</td>
-                <td>Biglietto Aereo</td>
-                <td>120€</td>
-            </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
 
-            <tr>
-                <td>1</td>
-                <td>Biglietto Aereo</td>
-                <td>120€</td>
-            </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120€</td>
+                </tr>
 
-            <tr>
-                <td>1</td>
-                <td>Biglietto Aereo</td>
-                <td>120€</td>
-            </tr>
-
-            <tr>
-                <td>Totale</td>
-                <td> </td>
-                <td>360€</td>
-            </tr>
-    </table>
-   <hr>
-
-    <!-- Sezione Lista cose da Fare -->
-    <h3>Cose da fare</h3>
-        <ul>
-            <li>Visitare la Tower of London &#10003;</li>
-            <li>Visitare greenwich &#10003;</li>
-            <li>Ascoltare un artista di strada a Convent Garden &#10003;</li>
-            <li>Mangiare il tipico Fish and Chips Inglese &#x2717;</li>
-        </ul>
+                <tr>
+                    <td>Totale</td>
+                    <td> </td>
+                    <td>360€</td>
+                </tr>
+        </table>
     <hr>
 
-    <!-- Sezione Informazioni Utili  -->
-    <h3>Info utili:</h3>
-        <ol>
-            <li>Numeri Utili di emergenza</li>
+        <!-- Sezione Lista cose da Fare -->
+        <h3>Cose da fare</h3>
             <ul>
-                <li><strong>999</strong> - Emergenza</li>
-                <li><strong>101</strong> - Numero Polizia</li>
-                <li><strong>111</strong> - Numero assistenza medica</li>
+                <li>Visitare la Tower of London &#10003;</li>
+                <li>Visitare greenwich &#10003;</li>
+                <li>Ascoltare un artista di strada a Convent Garden &#10003;</li>
+                <li>Mangiare il tipico Fish and Chips Inglese &#x2717;</li>
             </ul>
-
-            <li>Hotel</li>
-            <ul>
-                <li><strong>Nome Hotel:</strong> Buckingham Palace</li>
-                <li><strong>101</strong> Westminsterm Londow SW1A 1AA,Regno Unito</li>
-            </ul>
-
-            <li>Aereo</li>
-            <ul>
-                <li><strong>Volo di Andata:</strong> Y1234X, ore 9.30 da Milano Malpensa</li>
-                <li><strong>Volo di Ritorno</strong> Y1236X, ore 18.30 da London Heathrow</li>
-            </ul>
-        </ol>
         <hr>
-    </body>    
+
+        <!-- Sezione Informazioni Utili  -->
+        <h3>Info utili:</h3>
+            <ol>
+                <li>Numeri Utili di emergenza</li>
+                <ul>
+                    <li><strong>999</strong> - Emergenza</li>
+                    <li><strong>101</strong> - Numero Polizia</li>
+                    <li><strong>111</strong> - Numero assistenza medica</li>
+                </ul>
+
+                <li>Hotel</li>
+                <ul>
+                    <li><strong>Nome Hotel:</strong> Buckingham Palace</li>
+                    <li><strong>101</strong> Westminsterm Londow SW1A 1AA,Regno Unito</li>
+                </ul>
+
+                <li>Aereo</li>
+                <ul>
+                    <li><strong>Volo di Andata:</strong> Y1234X, ore 9.30 da Milano Malpensa</li>
+                    <li><strong>Volo di Ritorno</strong> Y1236X, ore 18.30 da London Heathrow</li>
+                </ul>
+            </ol>
+            <hr>
+        </body>   
+    </div> 
 
     <!-- Sezione Foto -->
     <footer>
