--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             </thead>
 
             <!-- Corpo Tabella -->
+            <tbody>
                 <tr>
                     <td>1</td>
                     <td>Biglietto Aereo</td>
@@ -54,6 +55,7 @@
                     <td> </td>
                     <td>360€</td>
                 </tr>
+            </tbody>
         </table>
     <hr>
 
